2007-01-14  Viktor Griph  <griph(at)dd(dot)chalmers(dot)se>

	* fvwm/fvwm.h (FvwmWindow):
	icon_nalloc_pixels is int instead of unsined int

	* libs/PictureUtils.h (PictureCloseImageColorAllocator):
	* libs/PictureUtils.c (PictureCloseImageColorAllocator):
	use int instead of unsigned int.

	* fvwm/menugeometry.c (menu_get_geometry)
	(menu_get_outer_geometry):
	* fvwm/focus.c (CMD_WarpToWindow):
	* fvwm/geometry.c (get_title_button_geometry):
	* fvwm/session.c (SaveWindowStates):
	* fvwm/conditional.c (CMD_WindowId):
	* fvwm/placement.c (__place_get_wm_pos):
	* fvwm/frame.c (frame_create_move_resize_args):
	* fvwm/icons.c (GetIconBitmap, GetIconWindow):
	* fvwm/add_window.c (CaptureOneWindow, AddWindow):
	* fvwm/builtins.c (CMD_Destroy, CMD_Close):
	* fvwm/style.c (style_parse_icon_box_style):
	* fvwm/move_resize.c (resize_move_window, InteractiveMove)
	(AnimatedMoveAnyWindow, __move_window, __move_loop)
	(__resize_window):
	* fvwm/events.c (HandlePropertyNotify)
	(__is_bpress_window_handled):
	* fvwm/menus.c (paint_menu_gradient_background, pop_menu_up)
	(get_menu_options):
	fix geometry signed pointer warnings

	* libs/Graphics.c (CalculateGradientDimensions):
	cast pointer to unsigned int*

	* libs/FScreen.h (FScreenGetScrRect, FScreenGetResistanceRect):
	* libs/FScreen.c (FScreenGetScrRect, FScreenClipToScreen)
	(FScreenCenterOnScreen, FScreenGetResistanceRect, FScreenGetGeometry):
	change unsigned int* parameter to int*. It get's info stored in an
	unsigned short, so it should be OK.

	* fvwm/externs.h:
	* fvwm/fvwm.c:
	JunkMask is unsigned

	* fvwm/stack.c (__mark_group_member)
	(is_transient_subtree_stacked_straight, __is_restack_needed)
	(__restack_window, mark_transient_subtree):
	don't raise or lower windows if they are already at the right place.

2007-01-13  Renato Caldas  <seventhguardian@gmail.com>

	* fvwm/module_interface.c (struct cqueue_object_type):
	* fvwm/module_list.h (struct fmodule_input):